# vk-farmer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  README_RU.md  Tauri.toml  config.json
src/: Cargo.toml  Tauri.toml  config.json  config.rs  error.rs  lib.rs  main.rs  manager.rs  prelude.rs
src/farmer/: biglike.rs  config.rs  farm_task.rs  farmer.rs  freelikes.rs  mod.rs  task.rs  vkontakte.rs
src/icons/: icon.icns
src/manager/: manager.rs  mod.rs
src/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  prelude.rs  templates.rs  tray.rs
src/src/farmer/: biglike.rs  farmer.rs  freelikes.rs  mod.rs  vkontakte.rs
src/src/manager/: manager.rs  task.rs
ui/assets/scripts/: anims.js  forms.js  main.js
ui/assets/styles/: main.css
ui/components/: _log.html  profile.html
ui/views/: main.html
