[package]
name = "vk-farmer-bot"
version = "0.2.1"
edition = "2024"

[dependencies]
chromedriver-api = "0.1.2"
futures = "0.3.31"
macron = { version = "0.1.5", features = ["derive", "input"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
