[package]
name = "soc-farmer-bot"
version = "0.3.3"
edition = "2024"
build = "src/build.rs"

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = ["config-toml"] }

[dependencies]
chromedriver-api = "0.1.5"
futures = "0.3.31"
macron = { version = "0.1.5", features = ["derive", "input"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tauri = { version = "2.0.3", features = ["config-toml", "tray-icon", "image-png"] }
tauri-plugin-prevent-default = "2.1.1"
chrono = { version = "0.4.41", features = ["alloc", "clock"] }
log = "0.4.27"
rand = "0.8.5"
once_cell = "1.21.3"
